[gd_scene load_steps=40 format=3 uid="uid://26kdu2s5ab8"]

[ext_resource type="Script" path="res://player/character.gd" id="1_otyc1"]
[ext_resource type="Texture2D" uid="uid://d4d6uw5jmara8" path="res://assets/characters/100x100/Armored Axeman/Armored Axeman/Armored Axeman-Idle.png" id="1_sgikh"]
[ext_resource type="Texture2D" uid="uid://1wsdws2xn3bq" path="res://assets/characters/100x100/Armored Axeman/Armored Axeman/Armored Axeman-Attack01.png" id="2_rps37"]
[ext_resource type="Script" path="res://player/states/idle_state.gd" id="3_0kajg"]
[ext_resource type="Texture2D" uid="uid://btaf8th64u1l4" path="res://assets/characters/100x100/Armored Axeman/Armored Axeman/Armored Axeman-Walk.png" id="3_pdeai"]
[ext_resource type="Script" path="res://scripts/hitscalebox.gd" id="5_0e3uv"]
[ext_resource type="Script" path="res://player/states/move_state.gd" id="5_8k3ac"]
[ext_resource type="Script" path="res://player/states/attack_state.gd" id="7_few8x"]
[ext_resource type="Script" path="res://scripts/health.gd" id="9_1egxm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vb7ny"]
atlas = ExtResource("2_rps37")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_hp1bw"]
atlas = ExtResource("2_rps37")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mmi0n"]
atlas = ExtResource("2_rps37")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_uas6m"]
atlas = ExtResource("2_rps37")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_6i5ir"]
atlas = ExtResource("2_rps37")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1w7av"]
atlas = ExtResource("2_rps37")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2vok4"]
atlas = ExtResource("2_rps37")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kacgt"]
atlas = ExtResource("2_rps37")
region = Rect2(700, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_oeco2"]
atlas = ExtResource("2_rps37")
region = Rect2(800, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4lkh"]
atlas = ExtResource("1_sgikh")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqgdo"]
atlas = ExtResource("1_sgikh")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_su0qs"]
atlas = ExtResource("1_sgikh")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4a0r"]
atlas = ExtResource("1_sgikh")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_4b27y"]
atlas = ExtResource("1_sgikh")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_evqvq"]
atlas = ExtResource("1_sgikh")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbl7w"]
atlas = ExtResource("3_pdeai")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_psvc0"]
atlas = ExtResource("3_pdeai")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_51nfj"]
atlas = ExtResource("3_pdeai")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_posmt"]
atlas = ExtResource("3_pdeai")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_waucy"]
atlas = ExtResource("3_pdeai")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_asmux"]
atlas = ExtResource("3_pdeai")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jb3g4"]
atlas = ExtResource("3_pdeai")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_dknm4"]
atlas = ExtResource("3_pdeai")
region = Rect2(700, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_ex6ay"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vb7ny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hp1bw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mmi0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uas6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6i5ir")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1w7av")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2vok4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kacgt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oeco2")
}],
"loop": true,
"name": &"attack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4lkh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqgdo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_su0qs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4a0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4b27y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_evqvq")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbl7w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_psvc0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_51nfj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_posmt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_waucy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_asmux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jb3g4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dknm4")
}],
"loop": true,
"name": &"move",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pn642"]
radius = 5.0
height = 22.0

[sub_resource type="Animation" id="Animation_7kjdx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/Hitbox/Collider:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_aevxs"]
resource_name = "attack"
length = 1.4
step = 0.0823
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666667, 0.75, 0.833333, 0.916667, 1, 1.08333, 1.16667, 1.25, 1.33333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [&"attack", &"attack", &"attack", &"attack", &"attack", &"attack", &"attack", &"attack", &"attack", &"attack", &"attack", &"attack", &"attack", &"attack", &"attack", &"attack", &"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666667, 0.75, 0.833333, 0.916667, 1, 1.08333, 1.16667, 1.25, 1.33333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 1, 2, 3, 4, 6, 6, 7, 7, 6, 6, 6, 6, 3, 2, 1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/Hitbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666667, 0.75, 0.833333, 0.916667, 1, 1.08333, 1.16667, 1.25, 1.33333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(8, -2), Vector2(7.99998, -2), Vector2(-9, -10), Vector2(-9, -10), Vector2(-9, -10), Vector2(-7.65725, -9.29944), Vector2(14, 2), Vector2(14, 2), Vector2(14, 2), Vector2(14, 2), Vector2(14, 2), Vector2(14, 2), Vector2(14, 2), Vector2(13.999, 1.99947), Vector2(-9, -10), Vector2(-9, -10), Vector2(-9, -10)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D/Hitbox:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666667, 0.75, 0.833333, 0.916667, 1, 1.08333, 1.16667, 1.25, 1.33333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -5.61759e-07, -0.698132, -0.698132, -0.698132, -0.749079, -1.5708, -1.5708, -1.5708, -1.5708, -1.5708, -1.5708, -1.5708, -1.57076, -0.698132, -0.698132, -0.698132]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D/Hitbox/Collider:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.4115, 0.5, 0.5761, 1.33333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [true, true, false, true, true]
}

[sub_resource type="Animation" id="Animation_ms64w"]
resource_name = "idle"
length = 1.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666667, 0.75, 0.833333, 0.916667, 1, 1.08333, 1.16667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [&"idle", &"idle", &"idle", &"idle", &"idle", &"idle", &"idle", &"idle", &"idle", &"idle", &"idle", &"idle", &"idle", &"idle", &"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666667, 0.75, 0.833333, 0.916667, 1, 1.08333, 1.16667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 0, 1, 1, 2, 2, 2, 2, 3, 3, 4, 4, 4, 5]
}

[sub_resource type="Animation" id="Animation_w0ees"]
resource_name = "walk"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666667, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [&"move", &"move", &"move", &"move", &"move", &"move", &"move", &"move", &"move", &"move"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666667, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 1, 2, 3, 4, 5, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d802w"]
_data = {
"RESET": SubResource("Animation_7kjdx"),
"attack": SubResource("Animation_aevxs"),
"idle": SubResource("Animation_ms64w"),
"move": SubResource("Animation_w0ees")
}

[node name="CharacterBody2D" type="CharacterBody2D" groups=["player"]]
collision_mask = 11
script = ExtResource("1_otyc1")

[node name="Root" type="Node2D" parent="."]

[node name="Sprite2D" type="AnimatedSprite2D" parent="Root"]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_ex6ay")
animation = &"attack"
autoplay = "idle"

[node name="Hitbox" type="Area2D" parent="Root/Sprite2D" node_paths=PackedStringArray("root")]
position = Vector2(8, -2)
collision_layer = 32
collision_mask = 16
script = ExtResource("5_0e3uv")
root = NodePath("../..")
metadata/_edit_group_ = true

[node name="Collider" type="CollisionShape2D" parent="Root/Sprite2D/Hitbox"]
shape = SubResource("CapsuleShape2D_pn642")
disabled = true
one_way_collision_margin = 0.0
debug_color = Color(0.768262, 0.393514, 0.559138, 0.42)

[node name="LimboHSM" type="LimboHSM" parent="."]

[node name="IdleState" type="LimboState" parent="LimboHSM" node_paths=PackedStringArray("root", "animation_player")]
script = ExtResource("3_0kajg")
root = NodePath("../../Root")
animation_player = NodePath("../../AnimationPlayer")
idle_animation = &"idle"

[node name="MoveState" type="LimboState" parent="LimboHSM" node_paths=PackedStringArray("animation_player")]
script = ExtResource("5_8k3ac")
animation_player = NodePath("../../AnimationPlayer")
animation = &"move"

[node name="AttackState" type="LimboState" parent="LimboHSM" node_paths=PackedStringArray("animation_player")]
script = ExtResource("7_few8x")
animation_player = NodePath("../../AnimationPlayer")
animation = &"attack"

[node name="Collider" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -2)
shape = SubResource("CapsuleShape2D_pn642")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Root")
libraries = {
"": SubResource("AnimationLibrary_d802w")
}
autoplay = "idle"
playback_auto_capture = false

[node name="Health" type="Node" parent="."]
script = ExtResource("9_1egxm")

[connection signal="active_state_changed" from="LimboHSM" to="." method="_on_limbo_hsm_active_state_changed"]
